--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ li {
 }
 
 .badge {
+    display: inline-block;
     background-color: white;
     border-radius: 128px;
     padding: 10px 20px;
@@ -54,6 +55,7 @@ p {
 }
 
 .btn {
+    border: none;
     color: white;
     font-size: 18px;
     font-weight: bold;
@@ -72,6 +74,13 @@ p {
 
 .btn.btn-secondary {
     background-color: #6100C1;
+}
+
+.btn.btn-outline-info {
+    background-color: white;
+    color: #6ED2EF;
+    border: 2px solid #6ED2EF;
+    border-radius: 100px;
 }
 
 .color-darkblue {
@@ -137,18 +146,12 @@ h2 {
 
 .sec-header {
     background-color: #6100C1;
-    padding: 0px auto;
     padding-bottom: 170px;
 }
 
-.sec-header .content {
-    margin-bottom: 53px;
-}
-
-.sec-header .navbar {
+.sec-header .navbar .content {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     padding-top: 24px;
     padding-bottom: 24px;
 }
@@ -164,13 +167,16 @@ h2 {
 }
 
 .sec-header  .navbar a {
+    display: flex;
     font-size: 18px;
     font-weight: bold;
     color: white;
+    text-align: center;
     align-items: center;
     text-decoration: none;
     padding: 16px;
     transition: 0.5s;
+    width: 100%;
 }
 
 .sec-header  .navbar a:hover {
@@ -179,13 +185,13 @@ h2 {
     transition: 0.5s;
 }
 
-.sec-header .hero {
+.sec-header .hero .content {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 .sec-header h1 {
-    font-size: 87px;
+    font-size: 80px;
     font-weight: 900;
     line-height: 86px;
     color: white;
@@ -208,15 +214,18 @@ h2 {
 /* STYLE FEATURE */
 
 .sec-feature {
-    padding: 40px auto;
-    padding-bottom: 93px;
+    background-color: #FDFDFF;
+    padding: 53px 76px;
 }
 
 .sec-feature .content {
+    background-color: white;
+    border-radius: 24px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin-bottom: 76px;
+    padding: 40px 79px 40px;
 }
 .sec-feature h3 {
     font-size: 32px;
@@ -262,7 +271,7 @@ h2 {
 /* STYLE BENEFIT */
 
 .sec-benefits {
-    padding: 0px auto;
+    padding: 142px 125px;
 }
 
 .sec-benefits .text-group {
@@ -275,18 +284,16 @@ h2 {
 .sec-benefits h2 {
     font-size: 48px;
     font-weight: 900;
-    width: 476px;
+    width: 50%;
     line-height: 54px;
 }
 
 .sec-benefits .text-group p {
     font-size: 16px;
     color: #878799;
-    width: 650px;
+    width:50%;
     text-align: justify;
-    align-self: center;
     line-height: 30px;
-    margin-top: 16px;
 }
 
 .sec-benefits .benefit-group {
@@ -337,7 +344,7 @@ h2 {
 /* STYLE ABOUT US */
 
 .sec-about-us {
-    padding: 0px auto;
+    padding: 75px 125px;
 }
 
 .sec-about-us .content {
@@ -372,18 +379,17 @@ h2 {
 /* STYLE BANNER */
 
 .sec-banner-counter {
-    background-color: #222F5E;
-    border-radius: 24px;
-    padding: 0px auto;
+    padding: 93px 125px 146px;
+    background-color: #FDFDFF;
 }
 
 .sec-banner-counter .content {
+    background-color: #222F5E;
+    border-radius: 24px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     padding: 90px 64px;
-    margin-top: 93px;
-    margin-bottom: 146px;
 }
 
 .sec-banner-counter .content .group {
@@ -399,7 +405,8 @@ h2 {
 /* STYLE KNOWLEDGE BASE */
 
 .sec-knowledge-base {
-    padding: 0px auto;
+    padding-top: 75px;
+    padding-bottom: 75px;
 }
 
 .sec-knowledge-base .content {
@@ -430,13 +437,13 @@ h2 {
 .sec-knowledge-base .right img {
     width: 614px;
     height: 684px;
-    margin-bottom: 75px;
 }
 
 /* STYLE MEMBER */
 
 .sec-member {
-    padding: 9px auto;
+    padding-right: 125px;
+    padding-left: 125px;
 }
 
 .sec-member .heading {
@@ -458,10 +465,13 @@ h2 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 575px;
     background-color: rgb(122, 135, 168, .1);
     border-radius: 130px;
-    padding: 10px auto;
+    width: 575px;
+    height: 82px;
+    /* align-self: center; */
+    /* gap: 16px; */
+    padding: 10px 10px;
 }
 
 .sec-member a {
@@ -471,17 +481,16 @@ h2 {
     line-height: 30px;
 }
 
-.sec-member .heading a:hover {
+.sec-member .heading li:hover {
     background-color: #6ED2EF;
     border-radius: 100px;
     color: white;
     transition: 0.5s;
-    padding: 16px 40px;
+    padding: 15px 40px;
 }
 
 .sec-member li {
-    text-align: center;
-    padding: 16px 24px;
+    align-self: center;
 }
 
 .sec-member .trainer-group {
@@ -523,7 +532,7 @@ h2 {
 /* STYLE TESTIMONIAL */
 
 .sec-testimonial {
-    padding: 0px auto;
+    padding: 125px;
 }
 
 .sec-testimonial .heading {
@@ -552,11 +561,71 @@ h2 {
 
 .sec-testimonial .content-group .group p {
     font-size: 20px;
-    font-weight: 700px;
     line-height: 34px;
     padding: 32px;
     color: white;
     border-radius: 24px;
+    position: relative;
+}
+
+.sec-testimonial .content-group .group .p1::after {
+    content:"";
+    position: absolute;
+    background-image: url(images/vector-orange.svg);
+    width: 100px;
+    height: 43px;
+    bottom: -30px;
+    left: 20px;
+}
+
+.sec-testimonial .content-group .group .p1::before {
+    content: "";
+    position: absolute;
+    background-image: url(images/quote.svg);
+    width: 70px;
+    height: 70px;
+    top: -50px;
+    left: 20px;
+}
+
+.sec-testimonial .content-group .group .p2::after {
+    content: "";
+    position: absolute;
+    background-image: url(images/vector-blue.svg);
+    width: 100px;
+    height: 43px;
+    bottom: -30px;
+    left: 20px;
+}
+
+.sec-testimonial .content-group .group .p2::before {
+    content: "";
+    position: absolute;
+    background-image: url(images/quote.svg);
+    width: 70px;
+    height: 70px;
+    top: -50px;
+    left: 20px;
+}
+
+.sec-testimonial .content-group .group .p3::after {
+    content: "";
+    position: absolute;
+    background-image: url(images/vector-yellow.svg);
+    width: 100px;
+    height: 43px;
+    bottom: -30px;
+    left: 20px;
+}
+
+.sec-testimonial .content-group .group .p3::before {
+    content: "";
+    position: absolute;
+    background-image: url(images/quote.svg);
+    width: 70px;
+    height: 70px;
+    top: -50px;
+    left: 20px;
 }
 
 .sec-testimonial .content-group .frame {
@@ -584,9 +653,14 @@ h2 {
 /* STYLE BANNER-ENROLL */
 
 .sec-banner-enroll {
+    padding: 104px 109px;
+    background-color: white;
+}
+
+.sec-banner-enroll .content {
     background-color: #222F5E;
     border-radius: 24px;
-    padding: 90px;
+    padding: 90px 64px;
 }
 
 .sec-banner-enroll h2 {
@@ -607,7 +681,7 @@ h2 {
 /* STYLE BLOG */
 
 .sec-blog {
-    padding: 148px 0px;
+    padding: 0px 125px;
 }
 
 .sec-blog .title-content {
@@ -671,23 +745,15 @@ h2 {
     justify-content: center;
 }
 
-.sec-blog .article-group .btn {
-    background-color: white;
-    color: #6ED2EF;
-    border: 2px solid #6ED2EF;
-    border-radius: 100px;
-}
-
 /* BOTTOM NAVIGATION */
 
 .sec-bottom-navigation {
-    padding: 0px;
+    padding-top: 207px;
 }
 
 .sec-bottom-navigation .content {
     display: flex;
     flex-direction: row;
-    
     justify-content: space-around;
     gap: 75px;
 }
@@ -696,7 +762,7 @@ h2 {
     font-size: 14px;
     line-height: 30px;
     margin-top: 24px;
-    width: 270px;
+    width: 50%;
 }
 
 .sec-bottom-navigation .content .link {
@@ -719,18 +785,10 @@ h2 {
     padding-bottom: 8px;
 }
 
-.sec-bottom-navigation .content .home {
+.sec-bottom-navigation .content .widget {
     width: 155px;
 }
 
-.sec-bottom-navigation .content .services {
-    width: 155px;
-}
-
-.sec-bottom-navigation .content .about {
-    width: 155px;
-}
-
-.sec-bottom-navigation .content .offers {
-    width: 155px;
+.sec-bottom-navigation .content .widget h3 {
+    color: #222F5E;
 }
