--- a/style.css
+++ b/style.css
@@ -146,18 +146,11 @@ h2 {
 
 .sec-header {
     background-color: #6100C1;
-    padding-bottom: 170px;
 }
 
 .sec-header .navbar .content {
     display: flex;
-    justify-content: space-around;
-    padding-top: 24px;
-    padding-bottom: 24px;
-}
-
-.sec-header .navbar img {
-    width: 172px;
+    justify-content: space-between;
 }
 
 .sec-header  .navbar ul {
@@ -176,7 +169,6 @@ h2 {
     text-decoration: none;
     padding: 16px;
     transition: 0.5s;
-    width: 100%;
 }
 
 .sec-header  .navbar a:hover {
@@ -202,13 +194,7 @@ h2 {
 .sec-header p {
     font-size: 20px;
     color: white;
-    width: 570px;
     padding-bottom: 24px;
-}
-
-.sec-header .hero .hero-right {
-    width: 583px;
-    height: 607px;
 }
 
 /* STYLE FEATURE */
@@ -244,10 +230,10 @@ h2 {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    width: 13%
 }
 
 .sec-feature .icon-group img {
-    width: 50px;
     align-items: center;
 }
 
@@ -264,7 +250,6 @@ h2 {
     padding-bottom: 40px;
 }
 .sec-feature .dropdown img {
-    width: 32px;
     align-items: center;
 }
 
@@ -284,14 +269,14 @@ h2 {
 .sec-benefits h2 {
     font-size: 48px;
     font-weight: 900;
-    width: 50%;
+    width: 100%;
     line-height: 54px;
 }
 
 .sec-benefits .text-group p {
     font-size: 16px;
     color: #878799;
-    width:50%;
+    width: 100%;
     text-align: justify;
     line-height: 30px;
 }
@@ -307,11 +292,8 @@ h2 {
 .sec-benefits .benefit-group .group {
     background-color: white;
     display:  flex;
-    flex-direction: row;
-    justify-content: space-around;
     border-radius: 24px;
     width: 330px;
-    height: 130px;
     padding: 16px;
     gap: 22px;
 }
@@ -321,12 +303,7 @@ h2 {
     cursor: pointer;
 }
 
-.sec-benefits .benefit-group .group img {
-    width: 80px;
-}
-
 .sec-benefits .benefit-group .group .text {
-    width: 354px;
     gap: 4px;
     align-self: center;
 }
@@ -337,7 +314,6 @@ h2 {
 }
 .sec-benefits .benefit-group .group p {
     font-size: 16px;
-    width: 220px;
     color: #878799;
 }
 
@@ -394,6 +370,7 @@ h2 {
 
 .sec-banner-counter .content .group {
     text-align: center;
+    width: 15%;
     gap: 24px;
 }
 
@@ -428,15 +405,8 @@ h2 {
 
 .sec-knowledge-base .left p {
     font-size: 16px;
-    width: 579px;
     margin-top: 16px;
     margin-bottom: 24px;
-}
-
-
-.sec-knowledge-base .right img {
-    width: 614px;
-    height: 684px;
 }
 
 /* STYLE MEMBER */
@@ -467,37 +437,31 @@ h2 {
     justify-content: space-around;
     background-color: rgb(122, 135, 168, .1);
     border-radius: 130px;
-    width: 575px;
-    height: 82px;
-    /* align-self: center; */
-    /* gap: 16px; */
     padding: 10px 10px;
 }
 
 .sec-member a {
     color: #7A87A8;
     text-decoration: none;
-    transition: 0.5s;
     line-height: 30px;
 }
 
-.sec-member .heading li:hover {
+.sec-member .heading a:hover {
     background-color: #6ED2EF;
     border-radius: 100px;
-    color: white;
+    color: white ;
     transition: 0.5s;
-    padding: 15px 40px;
+    padding: 10px 20px;
 }
 
 .sec-member li {
-    align-self: center;
+    padding: 16px 24px;
 }
 
 .sec-member .trainer-group {
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 32px;
-    padding: 32px;
     margin-top: 82px;
 }
 
@@ -639,7 +603,7 @@ h2 {
 .sec-testimonial .content-group .frame h4 {
     font-size: 24px;
     font-weight: 600;
-    line-height: 34p;
+    line-height: 34px;
     color: #222F5E;
 }
 
@@ -653,7 +617,7 @@ h2 {
 /* STYLE BANNER-ENROLL */
 
 .sec-banner-enroll {
-    padding: 104px 109px;
+    padding: 0px 109px  104px;
     background-color: white;
 }
 
@@ -709,7 +673,6 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 280px;
 }
 
 .sec-blog .article-group .row-content .blog-content img {
@@ -762,7 +725,6 @@ h2 {
     font-size: 14px;
     line-height: 30px;
     margin-top: 24px;
-    width: 50%;
 }
 
 .sec-bottom-navigation .content .link {
@@ -786,7 +748,7 @@ h2 {
 }
 
 .sec-bottom-navigation .content .widget {
-    width: 155px;
+    width: 40%;
 }
 
 .sec-bottom-navigation .content .widget h3 {
