--- a/responsive.css
+++ b/responsive.css
@@ -25,6 +25,10 @@
         flex-direction: column;
     }
 
+    .sec-header .hero img {
+        width: 100%;
+    }
+
     .sec-header h1 {
         font-size: 64px;
     }
@@ -77,8 +81,7 @@
     }
 
     .sec-about-us .content img {
-        align-items: center;
-        justify-content: center;
+        width: 100%;
     }
 
     .sec-about-us .content .right h2 {
@@ -131,6 +134,12 @@
     .sec-member .heading h2 {
         font-size: 40px;
         text-align: center;
+    }
+
+    .sec-member .heading .frame {
+        display: flex;
+        flex-wrap: wrap;
+        border-radius: unset;
     }
 
     .sec-member .trainer-group {
@@ -186,17 +195,23 @@
         font-size: 40px;
     }
 
-    .sec-blog .article-group .row-content {
-        display: grid;
-        grid-template-columns: auto auto;
-        gap: 10px;
+    .sec-blog .article-group .row-content .blog-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 22.6%;
         padding: 0px;
+        gap: unset;
     }
 
     .sec-blog .article-group .row-content img {
         width: unset;
     }
     
+    .sec-blog .article-group .row-content .blog-content h4 {
+        font-size: 18px;
+    }
+
     .sec-bottom-navigation {
         padding: 25px;
     }
